--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,7 +37,7 @@
     "web-vitals": "^3.5.2"
   },
   "scripts": {
-    "start": "npm run make-i18n && vite",
+    "start": "npm run make-i18n && vite --host 0.0.0.0",
     "build": "tsc && vite build",
     "test": "vitest run",
     "preview": "vite preview",
