--- a/frontend/.env
+++ b/frontend/.env
@@ -2,3 +2,5 @@ VITE_BACKEND_HOST="127.0.0.1:3000"
 VITE_USE_TLS="false"
 VITE_INSECURE_SKIP_VERIFY="false"
 VITE_FRONTEND_PORT="3001"
+# LLM_API_KEY=
+# E2B_API_KEY=
